--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "first-start": "ng serve -o",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
